refactor: 상위 카테고리 json 반환 형식 수정